--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="./style.css">
     <title>QR Code Component</title>
   </head>
   <body>
-	  <div class="box">
-		  <img src="" alt="">
+	  <div class="qr-container">
+		  <div className="image-container">
+			  <img src="/image-qr-code.png" alt="QR Code">
+		  </div>
+		  <div class="qr-content">
+			  <h3>Improve your front-end skills by building projects</h3>
+			  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+		  </div>
 	  </div>
 	
     <div id="app"></div>
