--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 	  <div class="qr-container">
-		  <div className="image-container">
+		  <div class="image-container">
 			  <img src="/image-qr-code.png" alt="QR Code">
 		  </div>
 		  <div class="qr-content">
