--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 		  <div class="image-container">
 			  <img src="/image-qr-code.png" alt="QR Code">
 		  </div>
-		  <div class="qr-content">
-			  <h3>Improve your front-end skills by building projects</h3>
-			  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-		  </div>
+		<h3 class="qr-heading">Improve your front-end skills by building projects</h3>
+		  <p class="qr-subheading">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 	  </div>
 	
     <div id="app"></div>
